# youtube-analytics-project

./: pyproject.toml
homework-2/: moscowpython.json
src/: channel.py  playlist.py  video.py
