[tool.poetry]
name = "youtube-analytics-project"
version = "0.1.0"
description = ""
authors = ["dyadyasawa <dyadyasawa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
google-api-python-client = "^2.111.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
